# glTetris

./: .gitignore  CMakeLists.txt
Header Files/: game.h  resourceManager.h  shader.h
Source Files/: CMakeLists.txt  glad.c  main.cpp  resourceManager.cpp  shader.cpp
Third Party/: CMakeLists.txt
Third Party/glad/: glad.h
